# Data_study

./: README.md
FastCampus_UpstageAI/statistic/: chi-squared.ipynb
FastCampus_UpstageAI/upstage_python/company-python-project/: pyproject.toml
FastCampus_UpstageAI/upstage_python/flask/hyunjee-flask-backend/: app.py  app2.py  database.db  dust_api.py  dust_api2.py  geo_weather.py  pyproject.toml  srt.ipynb
FastCampus_UpstageAI/upstage_python/flask/hyunjee-flask-backend/templates/: index.html
FastCampus_UpstageAI/upstage_python/flask/hyunjee-flask-backend/한국환경공단 에어코리아 OpenAPI 기술문서/: 한국환경공단_에어코리아_대기오염정보_기술문서_v1.1.docx  한국환경공단_에어코리아_대기오염통계 현황_기술문서_v1.1.docx
FastCampus_UpstageAI/upstage_python/poetry/: main.py  pyproject.toml
FastCampus_UpstageAI/upstage_python/poetry/src/: test.py
SOCFT/: change_survey_data_8.19.csv  regression_survey_data.ipynb  survey_data_2.csv  survey_data_2.xlsx  survey_data_8.19.csv  survey_data_analysis.ipynb  설문조사 응답자 분석.docx
[HACKATON]CJ/: .gitattributes
[HACKATON]CJ/actor/: actor_drama_num.ipynb  actor_list_1000_1300.csv  actor_list_100_300.csv  actor_list_1300_1600.csv  actor_list_1600_1660.csv  actor_list_1660.csv  actor_list_300_500.csv  actor_list_500_700.csv  actor_list_700_1000.csv  actor_list_ver1_2.csv  actor_list_ver4.csv  actor_list_ver5.csv  actor_type_real.csv  actor_type_real_ver2.csv  actor_type_real_ver3.csv  actor_type_ver5_1.csv  (+3 more)
naver 부스트 캠프 pre-course/: chapter_1.py  chapter_2.py  chapter_3.py  chapter_4.ipynb  chapter_5.ipynb  chapter_6.ipynb  chapter_7.ipynb
백준/: 2차원배열.ipynb  기하_직사각형과삼각형.ipynb  일반수학1.ipynb
(+110 files in other folders)
