[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["kelly062001 <hyunjeesong95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.14.0"
django = "^4.2.6"
gtts = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
