[tool.poetry]
name = "hyunjee-flask-backend"
version = "0.1.0"
description = ""
authors = ["kelly062001 <hyunjeesong95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.0"
googlemaps = "^4.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
